build: enable release please - add and run synth.py