@@ -1,5 +1,5 @@
 #!/bin/bash
-# Copyright 2019 Google LLC
+# Copyright 2018 Google Inc.
 #
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
@@ -15,17 +15,20 @@
 
 set -eo pipefail
 
-cd github/java-bigtable-hbase/
+# STAGING_REPOSITORY_ID must be set
+if [ -z "${STAGING_REPOSITORY_ID}" ]; then
+  echo "Missing STAGING_REPOSITORY_ID environment variable"
+  exit 1
+fi
 
-# Print out Java
-java -version
-echo $JOB_TYPE
+source $(dirname "$0")/common.sh
 
-export MAVEN_OPTS="-Xmx1024m -XX:MaxPermSize=128m"
+pushd $(dirname "$0")/../../
 
-# this should run maven enforcer
-mvn install -B -V \
-  -DskipTests=true \
-  -Dclirr.skip=true
+setup_environment_secrets
+create_settings_xml_file "settings.xml"
 
-mvn -B dependency:analyze -DfailOnWarning=true
+mvn nexus-staging:release -B \
+  -DperformRelease=true \
+  --settings=settings.xml \
+  -DstagingRepositoryId=${STAGING_REPOSITORY_ID}
